--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
+
+        </activity>
+        <activity
+            android:name=".CoursesActivity"
+            android:label="@string/title_activity_courses" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
